added GoogleMaps, Contact page, Persons

--- a/app/views/page/index.html.erb
+++ b/app/views/page/index.html.erb
@@ -18,6 +18,11 @@
         <%= scrivito_tag :h1, @obj, :title %>
         <%= render partial: 'shared/breadcrumbs' %>
         <%= scrivito_tag :div, @obj, :content %>
+        <div class="page_footer">
+          <a href="/"> <i class="foundicon-home"></i> Home </a>
+          <a href="#top"><i class="foundicon-up-arrow"></i>Back to top</a>
+        </div>
+
       </div>
       <div class="col-md-3 col-md-pull-9">
 
