--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,5 +15,6 @@
  *= require application/foundation_icons_social
  *= require application/app
  *= require scrivito
+ *= require google_maps_widget/application
  *= require scrivito_elastic_slider/application
  */
