--- a/app/assets/stylesheets/editing.css
+++ b/app/assets/stylesheets/editing.css
@@ -1,5 +1,6 @@
 /*
  *= require scrivito
  *= require scrivito_editors
+ *= require google_maps_widget/editing
  *= require scrivito_tabbed_content_widget/editing
  */
