--- a/app/views/page/index.html.erb
+++ b/app/views/page/index.html.erb
@@ -25,29 +25,7 @@
 
       </div>
       <div class="col-md-3 col-md-pull-9">
-
-        <ul class="side_nav">
-          <li><a href="">More Lorem Ipsum</a></li>
-          <li><a href="">Egal Lormaot</a></li>
-          <li class="active">
-            <a href="">Fioenf and Andat</a>
-            <ul>
-              <li><a href="">2. Level  Dolor Cycle</a></li>
-              <li><a href="">Product Portfolio</a></li>
-              <li><a href="">Benefits</a>
-                <ul>
-                  <li><a href="">3. Level Ipsum Dolor Cycle</a></li>
-                  <li><a href="">Product Portfolio</a></li>
-                  <li><a href="">Benefits</a></li>
-                </ul>
-              </li>
-              <li><a href="">Food Lorem</a></li>
-            </ul>
-          </li>
-          <li><a href="">Lorem Dolorm</a></li>
-          <li><a href="">Egalfi Halaous</a></li>
-        </ul>
-
+        <%= render "shared/side_nav" %>
       </div>
 
     </div>
