--- a/app/views/blog/_post_short.html.erb
+++ b/app/views/blog/_post_short.html.erb
@@ -5,8 +5,6 @@
       <h4 class="h3"><a href="#<%= post_short.id %>"><span><%= post_short.title %></span></a></h4>
     </div>
   </div>
-  <div class="blog_body">TODO: shorten text of widget ..For more than half a year now, the content of this website is
-              maintained in lorem by developers and me. This ensures that all of our exp...
-  </div>
+  <div class="blog_body"><%= post_short.summary %></div>
 </div>
 
