--- a/app/views/background_widget/details.html.erb
+++ b/app/views/background_widget/details.html.erb
@@ -1,4 +1,16 @@
 <div class="details-view">
   <h4>Select background colour</h4>
-  <%= scrivito_edit_enum(widget, :colour) %>
+  <% Scrivito::ObjClass.find("BackgroundWidget").attributes["colour"].values.each do |colour| %>
+    <%= scrivito_tag :input, widget, "colour", type: "button", colour: colour, class: "button_editor bg_#{colour}", style: "padding: 20px;", 'data-editor' => 'none' %>
+  <% end %>
 </div>
+<script type="text/javascript">
+  scrivito.on("content", function() { 
+    if (scrivito.in_editable_view()) {
+      $(document).on("click.button_editor", ".button_editor", function(event) {
+        var button = $(event.target);
+        button.scrivito('save', button.attr('colour'));
+      }); 
+    }; 
+  });
+</script>
