--- a/app/assets/stylesheets/editing.css
+++ b/app/assets/stylesheets/editing.css
@@ -3,4 +3,5 @@
  *= require scrivito_editors
  *= require google_maps_widget/editing
  *= require scrivito_tabbed_content_widget/editing
+ *= require scrivito_slick_slider_widget/editing
  */
