--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -54,5 +54,6 @@
   <%= stylesheet_link_tag 'editing' %>
 <% end %>
 <%= scrivito_body_tags %>
+<script type="text/javascript" src="//cdn.jsdelivr.net/jquery.slick/1.3.11/slick.min.js"></script>
 </body>
 </html>
