adding slick slider to some pages

--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -21,7 +21,7 @@
     <% end -%>
   <% end -%>
           
-  <form class="navbar-form navbar-right" action="<%= scrivito_path(Obj.find_by_path("/search_results")) %>">
+  <form class="navbar-form navbar-right" action="<%= scrivito_path(Obj.find_by_path("/search")) %>">
     <input name="q" type="text" placeholder="Search..." class="form-control">
   </form>
   <ul class="nav navbar-nav navbar-right">
