--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,4 +17,5 @@
  *= require scrivito
  *= require google_maps_widget/application
  *= require scrivito_elastic_slider_widget/application
+ *= require scrivito_slick_slider_widget/application
  */
