content_browser now works, person show_picture

--- a/app/views/person_widget/details.html.erb
+++ b/app/views/person_widget/details.html.erb
@@ -1,5 +1,7 @@
 <div class="details-view">
   <h4>Person</h4>
   <%= scrivito_edit_reference(widget, :person) %>
+  <h4>Show Picture?</h4>
+  <%= scrivito_edit_enum(widget, :show_picture) %>
 
 </div>
