--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,6 +15,8 @@
  *= require application/foundation_icons_social
  *= require application/app
  *= require scrivito
+ *= require scrivito_editors
+ *= require scrivito_content_browser
  *= require google_maps_widget/application
  *= require scrivito_elastic_slider_widget/application
  *= require scrivito_slick_slider_widget/application
