--- a/app/views/person_widget/show.html.erb
+++ b/app/views/person_widget/show.html.erb
@@ -1,5 +1,8 @@
 <% if widget.person.present? %>
-  <div class="box_white">
+  <div class="box_<%= widget.colour %>">
+    <% if widget.person.is_company? && widget.person.googlemap.present? %>
+      <iframe frameborder="0" width="100%" height="250" src="<%= widget.person.googlemap.url %>" style="border:0"></iframe>
+    <% end %>
     <% unless widget.show_picture == "no" %>
       <%= scrivito_image_tag(widget.person, :image, class: "img-responsive") %>
     <% end %>
@@ -18,8 +21,14 @@
     <% if widget.person.facebook.present? %>
       <a href="<%= scrivito_field widget.person, :facebook %>"><i class="foundicon-facebook"></i></a>
     <% end %>
+    <% if widget.person.googleplus.present? %>
+      <a href="<%= scrivito_field widget.person, :googleplus %>"><i class="foundicon-google-plus"></i></a>
+    <% end %>
     <% if widget.person.twitter.present? %>
       <a href="<%= scrivito_field widget.person, :twitter %>"><i class="foundicon-twitter"></i></a>
+    <% end %>
+    <% if widget.person.slideshare.present? %>
+      <a href="<%= scrivito_field widget.person, :slideshare %>"><i class="foundicon-slideshare"></i></a>
     <% end %>
   </div>
 <% else %>
