trying to fix missing mixin

--- a/app/assets/stylesheets/application/bootstrap/_mixins.scss
+++ b/app/assets/stylesheets/application/bootstrap/_mixins.scss
@@ -37,3 +37,6 @@
 @import "mixins/nav-vertical-align";
 @import "mixins/grid-framework";
 @import "mixins/grid";
+
+// heroku complains about missing mixin 'transition':
+@import "mixins/transition"
