NamedLink, Cleanup, started on Icon Boxes

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -20,4 +20,5 @@
  *= require google_maps_widget/application
  *= require scrivito_elastic_slider_widget/application
  *= require scrivito_slick_slider_widget/application
+ *= require icon_box_widget/application
  */
