--- a/app/views/headline_widget/thumbnail.html.erb
+++ b/app/views/headline_widget/thumbnail.html.erb
@@ -1,3 +1,3 @@
-<%= scrivito_thumbnail 'Headline Widget', :headline do %>
+<%= scrivito_thumbnail 'Headline', :headline do %>
   A headline widget.
 <% end %>
