--- a/app/views/text_widget/thumbnail.html.erb
+++ b/app/views/text_widget/thumbnail.html.erb
@@ -1,3 +1,3 @@
-<%= scrivito_thumbnail 'Text Widget', :text do %>
-  A widget for text and HTML content.
+<%= scrivito_thumbnail 'Text', :text do %>
+  Inserts text or HTML content.
 <% end %>
