--- a/app/views/broad_page/index.html.erb
+++ b/app/views/broad_page/index.html.erb
@@ -14,16 +14,10 @@
 <div class="bg_white">
   <div class="container">
     <div class="row">
-      <div class="col-md-9 col-md-push-3">
-        <%= scrivito_tag :h1, @obj, :title %>
-        <%= render partial: 'shared/breadcrumbs' %>
+      <div class="col-md-12">
         <%= scrivito_tag :div, @obj, :content %>
-        <%= render partial: 'shared/content_footer' %>
+        <%= render partial: "shared/content_footer" %>
       </div>
-      <div class="col-md-3 col-md-pull-9">
-        <%= render "shared/side_nav" %>
-      </div>
-
     </div>
   </div>
 </div>
