--- a/app/views/listitem_widget/details.html.erb
+++ b/app/views/listitem_widget/details.html.erb
@@ -3,7 +3,7 @@
   <%= scrivito_tag(:p, widget, :headline) %>
 
   <h4>Headline Size</h4>
-  <%= scrivito_edit_enum(widget, :headline_level) %>
+  <%= scrivito_edit_enum(widget, :headline_level, 'data-editor' => 'none') %>
 
   <h4>Subline</h4>
   <%= scrivito_tag(:p, widget, :subline) %>
