--- a/app/views/listitem_widget/thumbnail.html.erb
+++ b/app/views/listitem_widget/thumbnail.html.erb
@@ -1,13 +1,3 @@
-<div class="editing-dialog-thumbnail">
-  <div class="visualization">
-    <span class="icon editing-icon-list"></span>
-  </div>
-
-  <div class="title">
-    Listitem
-  </div>
-
-  <div class="description">
-    List item with headline, image and text.
-  </div>
-</div>
+<%= scrivito_thumbnail 'Listitem', :headline do %>
+  List item with headline, image and text.
+<% end %>
