--- a/app/assets/stylesheets/application/app.scss
+++ b/app/assets/stylesheets/application/app.scss
@@ -205,7 +205,7 @@ ul {padding-left:20px;}
 .nav > li > a:hover,
 .nav > li > a:focus { background:#f3f3f3; }
 
-.nav > li:hover .dropdown-menu { display:block;}
+.nav > li:hover .dropdown-menu { display:block; position: absolute;}
 
 .navbar-nav > li > a { font-size:15px; font-family: 'Signika', sans-serif; font-weight:400; padding:20px 12px; color:#666;}
 .navbar-nav.navbar-right > li > a { font-size:13px; padding:20px 10px;}
