Improvement of various navigations

--- a/app/views/blog/_post_short.html.erb
+++ b/app/views/blog/_post_short.html.erb
@@ -1,6 +1,6 @@
 <div class="blog_item short">
   <div class="blog_heading">
-    <img alt="Gravatar" class="blog_item_image" src="http://localhost:3000/assets/scriv-uno/square_01.png">
+    <img alt="Gravatar" class="blog_item_image" src="<%= asset_path("scriv-uno/square_01.png") %>">
     <div class="blog_heading_content">
       <h4 class="h3"><a href="#<%= post_short.id %>"><span><%= post_short.title %></span></a></h4>
     </div>
