--- a/app/views/shared/_flap.html.erb
+++ b/app/views/shared/_flap.html.erb
@@ -12,12 +12,9 @@
       </div>
 
       <div class="modal-body">
-        <form>
+        <form >
           <div class="form-group">
-            <input type="text" class="form-control" id="exampleInputusername" placeholder="Username">
-          </div>
-          <div class="form-group">
-            <input type="text" class="form-control" id="exampleInputcustomerid" placeholder="Customer number">
+            <input type="text" class="form-control" id="exampleInputusername" value="demo">
           </div>
           <div class="form-group">
             <input type="password" class="form-control" id="exampleInputpassword" placeholder="Password">
@@ -27,7 +24,7 @@
 
       <div class="modal-footer">
         <button type="submit" class="btn btn-primary pull-left">Login</button>
-        <button type="submit" class="btn btn-default pull-left">Register</button>
+        <button type="submit" class="btn btn-default pull-left disabled">Register</button>
       </div>
 
     </div>
